kubernetesor/web-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-demo
spec:
  selector:
    matchLabels:
      app: web-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: web-demo
    spec:
      containers:
        - name: web-demo
          image: registry.ariman.com:5000/web-demo
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ariman-registry-secret
