kubernetesor/web-demo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-demo-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: web-demo.ingress.k8s.ariman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: web-demo-service
              servicePort: 80
